--- a/frontend/res/styles/forum.less
+++ b/frontend/res/styles/forum.less
@@ -3,7 +3,7 @@
     margin-bottom: 15px;
   }
 
-  .card {
+  .thread_card {
     margin-top: 5px;
     background-color: white;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, .3);
