--- a/frontend/res/styles/market.less
+++ b/frontend/res/styles/market.less
@@ -31,15 +31,17 @@
     height: 300px;
   }
 
-  h3 {
-    margin: 0;
-    display: inline-block;
-    padding: 0 5px 5px 0;
-    border-bottom: 2px solid #3d77c7;
-    color: #3d77c7;
-  }
+  table {
+    .red {
+      color: #db5542;
+    }
 
-  table td {
-    cursor: pointer;
+    .green {
+      color: #53b37b;
+    }
+
+    td {
+      cursor: pointer;
+    }
   }
 }
