--- a/frontend/res/styles/strategy.less
+++ b/frontend/res/styles/strategy.less
@@ -52,6 +52,13 @@
     #code_editor {
       font-size: 14px;
     }
+
+    .no_select {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: dimgray;
+    }
   }
 
 }
