--- a/frontend/res/views/home.html
+++ b/frontend/res/views/home.html
@@ -7,3 +7,37 @@
         开始你的股票之旅
     </button>
 </div>
+
+<div class="advantage1">
+  <div class="col-sm-3 col-md-4">
+      <h3>
+          <i class="mdi mdi-view-list"></i>
+          梁家銘說他來想
+      </h3>
+      <p>我也不知道這裡要寫什麼</p>
+  </div>
+</div>
+
+<div class="advantage2">
+  <div class="col-sm-3 col-md-4">
+        <h3>
+            <i class="mdi mdi-view-list"></i>
+            梁家銘說他來想
+        </h3>
+        <p>我也不知道這裡要寫什麼</p>
+
+  </div>
+</div>
+
+<div class="advantage3">
+  <div class="col-sm-3 col-md-4">
+        <h3>
+            <i class="mdi mdi-view-list"></i>
+            梁家銘說他來想
+        </h3>
+        <p>我也不知道這裡要寫什麼</p>
+
+  </div>
+</div>
+
+
